--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary-color: #48294b;
+}
+
 .container {
   width: 70%;
   max-width: 1100px;
@@ -58,27 +62,34 @@
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 .PhoneInputInput {
   /* The phone number input stretches to fill all empty space */
-  flex: 1;
   /* The phone number input should shrink
 	   to make room for the extension input */
-  min-width: 0;
   width: 100%;
-  height: 3rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 1rem;
+  flex-shrink: 1;
+  height: 3rem /* 48px */;
+  padding-left: 1rem /* 16px */;
+  padding-right: 1rem /* 16px */;
+  font-size: 0.875rem /* 14px */;
+  font-size: 1rem /* 16px */;
+  line-height: 1.25rem /* 20px */;
   line-height: 2;
-  line-height: 1.5rem;
+  line-height: 1.5rem /* 24px */;
   border-width: 1px;
   border-color: hsl(var(--bc) / var(--tw-border-opacity));
-  --tw-border-opacity: 0;
+  --tw-border-opacity: 0.5;
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   border-radius: var(--rounded-btn, 0.5rem);
+}
+
+.PhoneInputInput:focus {
+  outline: 2px solid hsla(var(--bc) / 0.2);
+  outline-offset: 2px;
 }
 
 .PhoneInputCountryIcon {
